add server.js .gitignore app/index.js

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/lotfire/node_together_paris/issues"
   },
-  "homepage": "https://github.com/lotfire/node_together_paris#readme"
+  "homepage": "https://github.com/lotfire/node_together_paris#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  }
 }
